--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^1.7.0",
     "sequelize": "^5.21.1"
   }
