--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,8 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "database_development",
+    "database": "barter_db",
+    "port": 3307,
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
