--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,10 @@
         "commonjs": true,
         "node": true
     },
-    "extends": "prettier",
+    "extends": "eslint",
     "plugins": [
-        "prettier"
-         "Auth0 + Passport.js"
-        "Node" " NodeEmailer"
-        "Express" "Express Handlebars"
-        "MySql"
-        "Sequelize"
+        "eslint"
+       
       ],
     "rules": {
         "no-duplicate-case":"error",
@@ -40,6 +36,6 @@
             "error",
             "always"
         ],
-        "prettier/prettier": "error"
+        "eslint/eslint": "error"
     }
 }
