--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,38 +4,35 @@
         "commonjs": true,
         "node": true
     },
-    "extends": "eslint",
-    "plugins": [
-        "eslint"
-       
-      ],
+    "extends": "eslint:recommended",
     "rules": {
         "no-duplicate-case":"error",
-        "no-empty":"error",
-        "no-extra-semi":"error",
-        "no-extra-parens":"error",
-        "no-func-assign": "error",
-        "no-irregular-whitespace":"error",
-        "no-unreachable": "error",
-        "curly": "error",
-        "dot-notation": "error",
-        "eqeqeq": "error",
-        "no-empty-function": "error",
-        "no-multi-spaces": "error",
-        "no-unused-vars": "error",
-        "camelcase": "error",
-        "indent": [
-            "error",
-            2
-        ],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "eslint/eslint": "error"
-    }
+      "no-extra-semi":"error",
+      "no-func-assign": "error",
+      "no-irregular-whitespace":"error",
+      "no-unreachable": "error",
+      "curly": "error",
+      "no-empty-function": "error",
+      "no-multi-spaces": "error",
+      "no-mixed-spaces-and-tabs": "error",
+      "no-trailing-spaces": "error",
+      "default-case": "error",
+      "no-fallthrough": "error",
+      "no-unused-vars": "error",
+      "no-use-before-define": "error",
+      "camelcase": "error",
+     
+      "indent": [
+          "error",
+          2
+      ],
+      "quotes": [
+          "error",
+          "single"
+      ],
+      "semi": [
+          "error",
+          "always"
+      ]
+  }
 }
