--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^1.7.0",
     "sequelize": "^5.21.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-plugin-vue": "^5.2.3"
   }
 }
