--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "homepage": "https://github.com/ApVen77/Project-2#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "mysql2": "^1.7.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.1"
   },
   "devDependencies": {
