--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "root",
+        "password": "Saludesvida2019!",
         "database": "sequelize_barter_db",
         "port": 3306,
         "host": "127.0.0.1",
